--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
           <%= f.select :priority, (1..3) %>
           <br>
           <%= f.label :'completion date', :class => "highlight" %>
-          <%= f.date_field(:completiondate) %>
+          <%= f.date_field :completiondate, :class=>"form_description_box" %>
           <br>
           <br>
           <%= f.submit 'Add task', :class => 'btn btn-primary'%>
