--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,8 +10,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-xs-3"></div>
+    <div class="col-md-4 col-xs-6">
 
       <div class="login_form">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
