--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-xs-3"></div>
+    <div class="col-md-4 col-xs-6">
       <div class="task_form">
         <h2> Add a Task: </h2>
         <%= form_for Task.new do |f| %>
@@ -26,7 +26,7 @@
   <div class="row">
     <% if @tasks.any? %>
       <% @tasks.reverse.each do |task| %>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-6">
           <div class="card-deck">
             <div class="card" style="width: 100%; ">
               <div class="front">
